@@ -21,11 +21,16 @@ package org.thymeleaf.spring4.processor.attr;
 
 import java.util.Arrays;
 
+import org.springframework.web.servlet.support.BindStatus;
+import org.springframework.web.servlet.support.RequestContext;
 import org.thymeleaf.Arguments;
 import org.thymeleaf.dom.Attribute;
 import org.thymeleaf.dom.Element;
 import org.thymeleaf.exceptions.TemplateProcessingException;
+import org.thymeleaf.spring4.naming.SpringContextVariableNames;
 import org.thymeleaf.spring4.util.FieldUtils;
+import org.thymeleaf.standard.expression.IStandardExpression;
+import org.thymeleaf.standard.expression.VariableExpression;
 import org.thymeleaf.standard.processor.attr.AbstractStandardSingleAttributeModifierAttrProcessor;
 import org.thymeleaf.util.StringUtils;
 
@@ -72,8 +77,8 @@ public final class SpringErrorClassAttrProcessor
     protected String getTargetAttributeValue(
             final Arguments arguments, final Element element, final String attributeName) {
 
-        final String fieldName = element.getAttributeValueFromNormalizedName("name");
-        if (StringUtils.isEmptyOrWhitespace(fieldName)) {
+        final BindStatus bindStatus = computeBindStatus(arguments, element, attributeName);
+        if (bindStatus == null) {
             final String[] fieldProcessorNames =
                     Attribute.applyPrefixToAttributeName(
                             AbstractSpringFieldAttrProcessor.ATTR_NAME, Attribute.getPrefixFromAttributeName(attributeName));
@@ -83,8 +88,7 @@ public final class SpringErrorClassAttrProcessor
                     "value in the same host tag.");
         }
 
-        // If the selected field has errors, append the selected class
-        if (FieldUtils.hasErrors(arguments.getConfiguration(), arguments, fieldName)) {
+        if (bindStatus.isError()) {
 
             // Compute the CSS class to be applied exactly as it would in a normal th:classappend processor
             return super.getTargetAttributeValue(arguments, element, attributeName);
@@ -92,6 +96,60 @@ public final class SpringErrorClassAttrProcessor
         }
 
         return "";
+
+    }
+
+
+
+    /*
+     * There are two scenarios for a th:errorclass to appear in: one is in an element for which a th:field has already
+     * been executed, in which case we already have a BindStatus to check for errors; and the other one is an element
+     * for which a th:field has not been executed, but which should have a "name" attribute (either directly or as
+     * the result of executing a th:name) -- in this case, we'll have to build the BuildStatus ourselves.
+     */
+    private static BindStatus computeBindStatus(final Arguments arguments, final Element element, final String attributeName) {
+
+        /*
+         * First, try to obtain an already-existing BindStatus resulting from the execution of a th:field attribute
+         * in the same element.
+         */
+        final BindStatus bindStatus =
+                (BindStatus) arguments.getLocalVariable(SpringContextVariableNames.SPRING_FIELD_BIND_STATUS);
+        if (bindStatus != null) {
+            return bindStatus;
+        }
+
+        /*
+         * It seems no th:field was executed on the same element, so we must rely on the "name" attribute (probably
+         * specified by hand or by a th:name). No th:field was executed, so no BindStatus available -- we'll have to
+         * build it ourselves.
+         */
+        final String fieldName = element.getAttributeValue("name");
+        if (StringUtils.isEmptyOrWhitespace(fieldName)) {
+            return null;
+        }
+
+        final VariableExpression boundExpression =
+                (VariableExpression) arguments.getLocalVariable(SpringContextVariableNames.SPRING_BOUND_OBJECT_EXPRESSION);
+
+        if (boundExpression == null) {
+            // No bound expression, so just use the field name
+            return FieldUtils.getBindStatusFromParsedExpression(arguments.getConfiguration(), arguments, false, fieldName);
+        }
+
+        // Bound object and field object names might intersect (e.g. th:object="a.b", name="b.c"), and we must compute
+        // the real 'bindable' name ("a.b.c") by only using the first token in the bound object name, appending the
+        // rest of the field name: "a" + "b.c" -> "a.b.c"
+        final String boundExpressionStr = boundExpression.getExpression();
+        final String computedFieldName;
+        if (boundExpressionStr.indexOf('.') == -1) {
+            computedFieldName = boundExpressionStr + '.' + fieldName; // we append because we will use no form root afterwards
+        } else {
+            computedFieldName = boundExpressionStr.substring(0, boundExpressionStr.indexOf('.')) + '.' + fieldName;
+        }
+
+        // We set "useRoot" to false because we have already computed that part
+        return FieldUtils.getBindStatusFromParsedExpression(arguments.getConfiguration(), arguments, false, computedFieldName);
 
     }
 
