@@ -6,6 +6,8 @@
   accidentally picked for prototyping a view object.
 - Made data Spring format/conversion not apply for inputs with type 'number' or 'range' to
   avoid browsers being unable to parse data because of format (e.g. percents).
+- Fixed th:errorclass not picking the correct form property name when selected object expression
+  has more than one level.
 
 
 2.1.3
